--- a/Languages/default-ja.xml
+++ b/Languages/default-ja.xml
@@ -1020,8 +1020,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="開く(_O)"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="シード停止(_S)"/>
+		<item id="ID_DOWNLOADS_HELP" text="ヘルプ(_H)..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Torrent情報(_I)"/>
+		<item id="ID_DOWNLOADS_EDIT" text="Torrent情報(_I)..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="ヘルプ(_H)..."/>
