--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -1016,8 +1016,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Hape"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Ndale Mbjelljen"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Ndihmë..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Info mbi _Torrentin..."/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Info mbi Torrentin..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Ndihmë..."/>
