--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -1075,8 +1075,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Aç"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Yükleme Durdur"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Yardım..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="İ_leri Düzenleme"/>
+		<item id="ID_DOWNLOADS_EDIT" text="İ_leri Düzenleme..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Yardım..."/>
