--- a/Languages/default-ca.xml
+++ b/Languages/default-ca.xml
@@ -1016,8 +1016,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Obre"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Atura el sembrat"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Ajuda..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Informació"/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Informació..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Ajuda..."/>
