--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -1005,8 +1005,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Ava"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Lõpeta Jagamine"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Abi..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT text="_Info"/>
+		<item id="ID_DOWNLOADS_EDIT text="_Info..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Abi..."/>
