--- a/Languages/default-es-mx.xml
+++ b/Languages/default-es-mx.xml
@@ -1003,8 +1003,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Abrir"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Detener Seeding"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Ayuda..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Información de Torrent"/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Información de Torrent"/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Ayuda..."/>
