--- a/Languages/default-fi.xml
+++ b/Languages/default-fi.xml
@@ -999,8 +999,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Avaa"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Lopeta Jako"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Ohje..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Torrentti _Info"/>
+		<item id="ID_DOWNLOADS_EDIT" text="Torrentti _Info..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Ohje..."/>
