--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -1040,6 +1040,7 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Openen"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stop het uitzaaien"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Help..."/>
 		<separator/>
 		<item id="ID_DOWNLOADS_EDIT" text="_Torrentinformatie..."/>
 	</menu>
