--- a/Languages/default-no.xml
+++ b/Languages/default-no.xml
@@ -1001,8 +1001,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="Åpne"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stopp spreding"/>
+		<item id="ID_DOWNLOADS_HELP" text="_Hjelp..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Informasjon om torrent..."/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Informasjon om torrent..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Hjelp..."/>
