--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -1001,8 +1001,9 @@
 	<menu name="CDownloadsWnd.Seeding">
 		<item id="ID_DOWNLOADS_LAUNCH_COMPLETE" text="_Otvori"/>
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Stani Seeding"/>
+		<item id="ID_DOWNLOADS_HELP" text="Pomoć..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT" text="Informacije o _Torrent..."/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Informacije o Torrent..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="Pomoć..."/>
